# SAVT

./: .djlintrc  .dockerignore  .editorconfig  .env.example  .env.irregular  .env.pizza  .env.postgres  .env.test  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  GEMINI.md  POSTGRESQL.md  README.md  REQUIREMENTS.md  TEST_COVERAGE.md  cleanup.sh  debug_ci.py  docker-compose.yml  kill.sh  mypy.ini  noxfile.py  pizza_config.json  pyproject.toml  pyrightconfig.json  pytreqt  pytreqt.toml  qa  requirements.txt  rmdb.sh  run.sh  test.txt
.github/workflows/: ci.yml  deploy.yml
docs/: 2025-09-20-codebase-analysis.md  2025-09-20-load-testing.md  DEVELOPMENT.md  LOAD_TESTING.md  USER-SYSTEM-DESIGN.MD
docs/archive/: 2025-09-20-codebase-analysis.md
docs/troubleshooting/: vscode-issues.md  vscode-phantom-git-files.md
planning/: 2025-09-18-concurrency-scaling-plan.md  2025-09-20-api-integration-roadmap.md  2025-09-22-observability-plan.md  2025-09-23-pytreqt-standalone-plan.md  2025-09-25-qa-tool-export-plan.md  qa-tool-export-plan.md  savt-pytreqt-usage-analysis.md
planning/archive/: 2025-09-22-observability-plan.md
pytreqt/: README.md  change_detector.py  generate_coverage_report.py  pytreqt.py  update_traceability.py
pytreqt/tools/: __init__.py  change_detector.py  generate_coverage_report.py  update_traceability.py
requirements/: base.txt  dev.txt
scripts/: analyze_failures.py  check.sh  clean_data.py  debug_urls.py  load_test.sh  load_test_final.py  load_test_gradual.py  load_test_quick.py  migrate_to_postgresql.py  postgres.sh  run_load_test.py  test_load_demo.py
specs/: .req_cache.json  README.md
specs/reports/: README.md  TEST_COVERAGE.md
specs/spec/: README.md  REQUIREMENTS.md
src/: api_routes.py  config.py  constants.py  database.py  logging_config.py  logging_utils.py  main.py  metrics.py  middleware.py  models.py  rate_limiting.py  request_utils.py  routes.py  service.py  telemetry.py  utils.py
src/application/: __init__.py  feature_service.py  item_operations_service.py  item_service.py  service.py  services.py  undo_service.py  validation.py
src/domain/: constants.py  entities.py  exceptions.py
src/infrastructure/: __init__.py
src/infrastructure/database/: __init__.py  database.py  models.py  repositories.py  undo_models.py
src/presentation/: __init__.py  api_routes.py  error_handlers.py  problem_details.py  routes.py
src/tools/: check_newlines.py
src/tools/pytreqt/: README.md  __main__.py  pytreqt.py
src/tools/pytreqt/tools/: change_detector.py  generate_coverage_report.py  requirements_stats.py  update_traceability.py
src/tools/qa/: __main__.py  qa.py
static/css/: styles.css
templates/: error.html  macros.html  properties.html
templates/fragments/: objects_list.html  standalone_properties.html
tests/: conftest.py  load_test_frontend.py  load_test_realistic.py  pytest_requirements.py  simple_performance_test.py  test_api.py  test_async_operations.py  test_character_validation.py  test_error_handling.py  test_frontend.py  test_frontend_requirements.py  test_htmx_interactions.py  test_rate_limiting.py  test_service.py  test_ui_functionality.py
