[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "savt"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "fastapi==0.115.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.12",
    "sqlmodel==0.0.22",
]

[project.optional-dependencies]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "fastapi-debug-toolbar==0.6.3",
    "httpx==0.27.2",
    "pytest==8.3.3",
    "uvicorn==0.31.0",
    "rich==13.8.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # FastAPI uses Depends() in defaults, this is expected
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
# More lenient settings for FastAPI project
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # FastAPI generates many type: ignore
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true  # FastAPI, SQLModel dependencies
