[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "savt"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "fastapi==0.116.2",
    "jinja2==3.1.6",
    "python-multipart==0.0.20",
    "sqlmodel==0.0.25",
    "pydantic-settings==2.10.1",
    "structlog==25.4.0",
    "psycopg2-binary==2.9.10",
    "asyncpg==0.30.0",
    "aiosqlite==0.21.0",
    "greenlet==3.2.4",
    "opentelemetry-api==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "opentelemetry-instrumentation-fastapi==0.58b0",
    "opentelemetry-instrumentation-sqlalchemy==0.58b0",
    "opentelemetry-exporter-prometheus==0.58b0",
]

[project.optional-dependencies]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.4.2",
    "uvicorn==0.35.0",
    "rich==14.1.0",
    "beautifulsoup4==4.13.5",
    "lxml==6.0.1",
    "click==8.2.1",
    "djlint==1.36.4",
    "mdformat==0.7.22",
    "typer==0.17.4",
    "pytest-asyncio==1.2.0",
    "pytest-xdist==3.8.0",
    "mypy>=1.18.2",
]


[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "B008", # FastAPI uses Depends() in defaults, this is expected
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
# Enable async support
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
# More lenient settings for FastAPI project
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # FastAPI generates many type: ignore
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true  # FastAPI, SQLModel dependencies

[tool.pylance]
reportMissingTypeStubs = "none"
